--- a/css/main.css
+++ b/css/main.css
@@ -203,3 +203,26 @@ p {
   width: 287px;
   padding-right: 40px;
 }
+
+/*COVER-TWO*/
+.cover-two {
+  width: 100%;
+  height: 394px;
+  background: url("../img/cover2.jpg");
+  background-size: cover;
+}
+.cover-two__description {
+  font-family: inherit;
+  font-size: 47px;
+  line-height: 55px;
+  color: #C7AA8B;
+}
+.cover-two .wrapper {
+  padding-top: 127px;
+}
+.cover-two__line {
+  width: 60px;
+  height: 2px;
+  margin-top: 23px;
+  background: #C7AA8B;
+}
