--- a/css/main.css
+++ b/css/main.css
@@ -226,3 +226,55 @@ p {
   margin-top: 23px;
   background: #C7AA8B;
 }
+
+/*TEAM*/
+.team {
+  width: 100%;
+  height: 408px;
+  margin-top: 80px;
+}
+.team__flexcontainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.team__flexcontainer_item {
+  width: 220px;
+  height: 100%;
+}
+.team__flexcontainer_item h3 {
+  font-family: inherit;
+  font-size: 30px;
+  line-height: 27px;
+  text-transform: uppercase;
+  color: #4D4D4D;
+}
+.team__flexcontainer_item h5 {
+  font-family: inherit;
+  font-size: 16px;
+  line-height: 20px;
+  color: #4D4D4D;
+  margin-top: 10px;
+}
+.team__flexcontainer_item p {
+  font-family: vollkornregular;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 20px;
+  color: #4D4D4D;
+  margin-top: 2px;
+}
+.team__flexcontainer_social {
+  width: 82px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-top: 11px;
+}
+.dina {
+  width: 109px;
+  justify-content: space-between;
+  align-items: flex-start;
+}
