--- a/css/main.css
+++ b/css/main.css
@@ -278,3 +278,62 @@ p {
   justify-content: space-between;
   align-items: flex-start;
 }
+
+/*TESTIMONIALS*/
+.testimonials {
+  width: 100%;
+  height: 386px;
+  background: #F7F7F7;
+  margin-top: 80px;
+}
+.testimonials .wrapper {
+  padding-top:  80px;
+  text-align: center;
+}
+.testimonials h6 {
+  font-family: inherit;
+  font-size: 15px;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: rgba(50, 50, 50, 0.36);
+}
+.testimonials__line {
+  width: 60px;
+  height: 2px;
+  background: rgba(50, 50, 50, 0.18);
+  margin: 0 auto;
+  margin-top: 14px;
+}
+.testimonials__flexcontainer {
+  width: 846px;
+  height: 166px;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+.testimonials__flexcontainer_item {
+  width: 360px;
+  height: 120px;
+}
+.testimonials__flexcontainer .fix-item {
+  width: 420px;
+}
+.testimonials__flexcontainer_item p {
+  font-family: 'vollkornregular';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 20px;
+  color: #4D4D4D;
+}
+.testimonials__flexcontainer_item .fix {
+  font-size: 13px;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: #C7AA8B;
+  margin-top: 1px;
+}
+.testimonials__flexcontainer_item .fix2 {
+  margin-top: 21px;
+}
